# reaction-api-vacancy-task

./: .env.example  .gitignore  README.md  default.nix  neo4j-reaction-api.cabal  nixpkgs.json  package.nix  shell.nix  stableNixpkgs.nix
app/: Main.hs
src/: Script.hs  SetupDB.hs
src/API/: APISpec.hs  Handlers.hs  Models.hs
tests/: TestSuite.hs
