cabal-version:      2.4
name:               neo4j-reaction-api
version:            0.0.1
author:             Equwece
maintainer:         99554597+Equwece@users.noreply.github.com
license:            AGPL-3.0-only
license-file:       COPYING

library
  exposed-modules: 
    External.Neo4j
    External.Interfaces
    External.Settings
    API.Models

  build-depends:
    base >=4.15,
    dotenv,
    hasbolt,
    hasbolt-extras,
    text,
    time,
    fast-logger,
    mtl,
    data-default,
    uuid,
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints 


executable neo4j-reaction-api
  main-is:          Main.hs
  build-depends:
    base >=4.15,
    dotenv,
    hasbolt,
    hasbolt-extras,
    text,
    time,
    fast-logger,
    mtl,
    data-default,
    neo4j-reaction-api
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
