cabal-version:      2.4
name:               neo4j-reaction-api
version:            0.0.1
author:             Equwece
maintainer:         99554597+Equwece@users.noreply.github.com
license:            LGPL-3.0-only
license-file:       COPYING

library
  exposed-modules: 
    External.Neo4j
    External.Interfaces
    External.Settings
    API.Models
    API.APISpec
    API.Handlers
    SetupDB

  build-depends:
    base >=4.15,
    dotenv,
    hasbolt,
    hasbolt-extras,
    text,
    time,
    fast-logger,
    mtl,
    data-default,
    uuid,
    containers,
    transformers,
    random,
    servant,
    servant-server,
    servant-openapi3,
    servant-blaze,
    openapi3,
    servant-swagger-ui,
    lens,
    aeson,
    blaze-html,
    servant-swagger-ui-core,
    bytestring,
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints 


executable neo4j-reaction-api
  main-is:          Main.hs
  build-depends:
    base >=4.15,
    dotenv,
    hasbolt,
    hasbolt-extras,
    text,
    time,
    fast-logger,
    mtl,
    data-default,
    uuid,
    servant,
    servant-server,
    wai,
    warp,
    neo4j-reaction-api
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N

test-suite neo4j-reaction-api-testsuite
  type:                     exitcode-stdio-1.0
  main-is:                  tests/TestSuite.hs
  build-depends:
    base >=4.15,
    dotenv,
    hasbolt,
    hasbolt-extras,
    text,
    time,
    fast-logger,
    mtl,
    data-default,
    uuid,
    servant,
    servant-server,
    servant-client,
    servant-client-core,
    wai,
    warp,
    hspec,
    hspec-contrib,
    QuickCheck,
    HUnit,
    http-client,
    neo4j-reaction-api
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints 
